<resources>
    <string name="doe_btn">Faça sua Doação</string>
    <string name="receber_btn">Receba sua Doação</string>
    <string name="perfil_btn">Perfil do Atendente</string>
    <string name="idiomatv">Escolha um Idioma.</string>
    <string name="app_name">Hands of Compassion</string>
    <string name="bemvindodoardortv">Bem-vindo Doador.</string>
    <string name="instrucoestv">Siga as instruções abaixo:</string>
    <string name="item1">• Tenha seus Documentos em mãos.</string>
    <string name="item2">• Aguarde os Atendentes.</string>
    <string name="item3">• Passe todas as informações necessárias.</string>
    <string name="item4">• Faça sua Doação.</string>
    <string name="item4b">• Receba sua Doação.</string>
    <string name="clickparadoar">Clique para Doar</string>
    <string name="bemvindorecebedortv">Seja Bem-vindo!</string>
    <string name="digiteseunome">Digite seu Nome:</string>
    <string name="clickparareceber">Clique para receber sua doação</string>
    <string name="jaecadastrado">Já passui cadastrado?</string>
    <string name="digiteCpf">   Digite seu CPF</string>
    <string name="buscar">BUSCAR</string>
    <string name="donationishere">Cadastre-se para Doar</string>
    <string name="donationanimous">Doar Anonimamente</string>
    <string name="cadastrarparareceber">Cadastre-se para Receber</string>
    <string name="digitesuasenha">Digite sua Senha</string>
    <string name="digiteseuemail">Digite seu E-mail</string>
    <string name="digiteseuemail2">Digite seu E-mail:</string>
    <string name="loginAtentendente">Bem-vindo Atendente, Faça o seu Login.</string>
    <string name="email">E-mail:</string>
    <string name="password">Senha:</string>
    <string name="login">Login</string>
    <string name="cadastrarnewatendente">Cadastrar Novo Funcionário</string>
    <string name="escolhaOpcao">Escolha uma Opção:</string>
    <string name="doadores">Doadores</string>
    <string name="beneficiarios">Beneficiários</string>
    <string name="estoque">Estoque</string>
    <string name="funcionarios">Funcionários</string>
    <string name="sair">SAIR</string>
    <string name="forgotPassword">Esqueceu a Senha?</string>
    <string name="resetPassword">Resetar Senha</string>
    <string name="CadastrarNOvoUser">Cadastre um Novo Atendente:</string>
    <string name="nome">Nome:</string>
    <string name="digiteNome">Digite seu Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="digitenome">Digite o Nome do Funcionário</string>
    <string name="atualizeSeuCadastro">Atualize o seu Cadastro:</string>
    <string name="atualizar">Atualizar</string>
    <string name="carregando">Carregando...</string>
    <string name="preencha">Preencha Todos os Campos.</string>
    <string name="dadosatualizados">Dados atualizados com sucesso.</string>
    <string name="falhaDados">Falha ao atualizar os dados:</string>
    <string name="sucessoUser">Sucesso ao Cadastrar Usuário.</string>
    <string name="erroserver">Erro no servidor.</string>
    <string name="senha6digitos">Digite uma Senha com no Mínimo 6 Caracteres.</string>
    <string name="emailvalido">Digite um E-mail válido.</string>
    <string name="emailemuso">Esse E-mail já está em Uso.</string>
    <string name="semconexao">Sem Conecxão a Internet.</string>
    <string name="errocadastar">Erro ao Cadastar Usuário.</string>
    <string name="loginRealizado">Login Realizado com Sucesso.</string>
    <string name="emailousenha">E-mail ou Senha Inválidos.</string>
    <string name="verificaremailoulixo">Verifique seu E-mail, Caixa de Entrada e Lixo Eletrônico.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="excluirfuncionario">Excluir Funcionário.</string>
    <string name="desejaexcluirmsm">DESEJA EXCLUIR FUNCIONÁRIO?</string>
    <string name="deslogar">Deslogar</string>
    <string name="deslogarmsm">DESEJA SAIR DA SUA CONTA?</string>
    <string name="digiteSobrenome">Digite seu Nome e Sobrenome</string>
    <string name="digiteseuendereco">Digite seu Endereço Completo.</string>
    <string name="digitedatadenascimento">Digite sua Data de Nascimento</string>
    <string name="digiteTelefone">Digite seu Telefone</string>
    <string name="tipodedoacao">Tipo de Doação</string>
    <string name="cpf">CPF:</string>
    <string name="endereco">Endereço:</string>
    <string name="telefone">Telefone:</string>
    <string name="data">Data de Nascimento:</string>
    <string name="cadastrarDoador">CADASTRAR DOADOR</string>
    <string name="cadatrarDonatario">CADASTRAR DONATÁRIO</string>
    <string name="selecionetipo">SELECIONE O TIPO DE DOAÇÃO</string>
    <string name="oqueDesejaReceber">Oque Deseja Receber?</string>
    <string name="oqueDesejaDoar">Oque Deseja Doar?</string>
    <string name="alimento">ALIMENTO</string>
    <string name="roupas">ROUPAS</string>
    <string name="brinquedos">BRINQUEDOS</string>
    <string name="higiene">HIGIENE PESSOAL</string>
    <string name="produtos">PRODUTOS DE LIMPEZA</string>
    <string name="bebes">PRODUTOS PARA BEBES</string>
    <string name="itensBasicos">ITENS BÁSICOS</string>
    <string name="moveis">MÓVEIS</string>
    <string name="eletro">ELETRODOMÉSTICOS</string>
    <string name="pix">DOAÇÃO MONETÁRIA</string>
    <string name="sucessoDoardo">Sucesso ao Cadastrar Doador.</string>
    <string name="sucessodonatario">Sucesso ao Cadastrar Donatário.</string>
    <string name="digitenomedoador">Digite o Nome do Doador...</string>
    <string name="digiteteNomedonatario">Digite o Nome do Dontário...</string>
    <string name="excluirDoador">Excluir Doador.</string>
    <string name="desejaexcluirmsmm">DESEJA EXCLUIR Doador?</string>
    <string name="excluirDonatario">Excluir Donatário.</string>
    <string name="desejaexcluirmsmmm">DESEJA EXCLUIR Donatário?</string>
    <string name="digiteseucpf">Introduzca su CPF:</string>
    <string name="atualizarDoador">ATUALIZAR DOADOR</string>
    <string name="atualizarRecebedor">ATUALIZAR DONATÁRIO</string>
    <string name="perfilReceberdor">Perfil do Donatário:</string>
    <string name="perfilDoador">Perfil do Doador:</string>
    <string name="cestaBasica">CESTA BÁSICA</string>
    <string name="naopereciveis">ALIMENTOS NÃO PERECÍVEIS</string>
    <string name="masculino">MASCULINO</string>
    <string name="infantilMasculino">MASCULINO INFANTIL</string>
    <string name="feminino">FEMININO</string>
    <string name="femininoInfntil">FEMININO INFANTIL</string>
    <string name="selecioneAlimento">Selecione o Alimento que Gostaria de Receber.</string>
    <string name="selecioneAlimentodoar">Selecione o Alimento que Gostaria de Doar.</string>
    <string name="validade">Validade:</string>
    <string name="digitevalidade">Digite a Validade do Produto</string>
    <string name="quantoReceber">Quanto Você quer Receber?</string>
    <string name="selcioneosALimentosdacestaa">Selecione os Alimentos da Cesta Básica:</string>
    <string name="arroz">Arroz</string>
    <string name="feijao">Feijão</string>
    <string name="macarrao">Macarrão</string>
    <string name="farinha_trigo">Farinha de Trigo</string>
    <string name="graodebico">Grão-de-bico</string>
    <string name="aveia">Aveia</string>
    <string name="quinoa">Quinoa</string>
    <string name="cereais_flocos">Cereais em Flocos</string>
    <string name="cuscuz">Cuscuz</string>
    <string name="massa_tomate">Massa de Tomate</string>
    <string name="oleo_vegetal">Óleo Vegetal</string>
    <string name="azeite_oliva">Azeite de Oliva</string>
    <string name="vinagre">Vinagre</string>
    <string name="sal">Sal</string>
    <string name="acucar">Açúcar</string>
    <string name="cafe">Café</string>
    <string name="cha">Chá</string>
    <string name="leite_po">Leite em Pó</string>
    <string name="leite_condensado">Leite Condensado</string>
    <string name="sopa_po">Sopa em Pó</string>
    <string name="ervilhas">Ervilhas</string>
    <string name="milho">Milho</string>
    <string name="atum_enlatado">Atum Enlatado</string>
    <string name="sardinha_enlatada">Sardinha Enlatada</string>
    <string name="carne_enlatada">Carne Enlatada (como Carne de Porco Desfiada)</string>
    <string name="sopa_enlatada">Sopa Enlatada</string>
    <string name="leite_evaporado">Leite Evaporado</string>
    <string name="tipodeRoupa">Selecione o Tipo de Roupa:</string>
    <string name="estadodeRoupa">Selecione o Estado da Roupa:</string>
    <string name="TamanhodeRoupa">Selecione o Tamanho da Roupa:</string>
    <string name="tipoDeBrinquedo">Selecione o Tipo de Brinquedo:</string>
    <string name="estadodeBrinquedo">Selecione o Estado do Brinquedo:</string>
    <string name="quantidadeDeBrinquedo">Selecione a Quantidade dos Brinquedos:</string>
    <string name="selecione5itens">Selecione no Mínimo 5 itens.</string>
    <string name="selecione12itens">Selecione no Máximo 12 itens.</string>
    <string name="sucessoCesta">Sucesso ao Cadastrar Cesta Básica.</string>
    <string name="agradecemosdoacao">"Agradecemos a sua doação!"</string>
    <string name="doacaofaradiferenca">Sua generosidade fará a diferença na vida de muitas pessoas. Volte sempre!</string>
    <string name="redessociais">Nos acompanhe em nossas redes sociais</string>
    <string name="fechar">FECHAR</string>
    <string name="alimentosalvo">Alimento Salvo com Sucesso.</string>
    <string name="roupasalvo">Roupa Salva com Sucesso.</string>
    <string name="brinquedosalvo">Brinquedo Salvo com Sucesso.</string>
    <string name="tipoodebrinquedoo">Tipo de Brinquedo:</string>
    <string name="estadoodebrinquedoo">Estado do Brinquedo:</string>
    <string name="quantidadeedebrinquedoo">Quantidade de Brinquedos:</string>
    <string name="tipooderoupaaa">Tipo de Roupa:</string>
    <string name="estadoodaRoupaaa">Estado da Roupa:</string>
    <string name="tamanhodaaaRoupaaa">Tamanho da Roupa:</string>
    <string name="item_1">Item 1:</string>
    <string name="item_2">Item 2:</string>
    <string name="item_3">Item 3:</string>
    <string name="item_4">Item 4:</string>
    <string name="item_5">Item 5:</string>
    <string name="item_6">Item 6:</string>
    <string name="item_7">Item 7:</string>
    <string name="item_8">Item 8:</string>
    <string name="item_9">Item 9:</string>
    <string name="item_10">Item 10:</string>
    <string name="item_11">Item 11:</string>
    <string name="item_12">Item 12:</string>
    <string name="alimentotipo">Tipo de Alimento:</string>
    <string name="validadealimento">Validade do Alimento:</string>
    <string name="quantidade">Quantidade dos Alimentos:</string>
    <string name="desejaExpluirBrinquedo">Excluir Brinquedo.</string>
    <string name="temCerteza">Tem certeza?</string>
    <string name="desejaExcluirRoupa">Excluir Roupa.</string>
    <string name="desejaExcluirCesta">Excluir Cesta Básica.</string>
    <string name="desejaexcluiralimento">Excluir Alimento.</string>
    <string name="atualizeEstoque">Atualize o Estoque:</string>
    <string name="quantodoas">Quanto Você quer Doar?</string>
    <string name="desejareceberdescrito">Deseja Receber Essa Doação?</string>
    <string name="ficamosfelizesemajudar">Ficamos Muito Felizes em Ajudar!</string>
    <string name="semprequeprecisar">Sempre que Precisar Conte com nossa Ajudar.</string>
    <string name="desejareceberdoacao">Deseja Receber Essa Doação?</string>
    <string name="quantosReceber">Quantos Alimentos quer Receber?</string>
    <string name="digiteQuantidade">Digite a Quantidade de Alimentos...</string>
    <string name="quantosReceberbrinq">Quantos Brinquedos quer Receber?</string>
    <string name="digiteQuantidadebrinq">Digite a Quantidade de Brinquedos...</string>
</resources>


